--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,52 @@
 
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Jardín Real - Inicio</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+  <header class="topbar">
+    <h1 class="brand">Jardín Real</h1>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="catalogo.html">Catálogo</a>
+      <a href="promociones.html">Promociones</a>
+      <a href="reportes.html">Reportes</a>
+      <a href="gestion_productos.html">Gestión</a>
+      <a href="login.html" class="btn">Iniciar sesión</a>
+    </nav>
+  </header>
+
+  <main class="container">
+    <section class="hero">
+      <h2>Ropa, calzado, disfraces y accesorios</h2>
+      <p>La mejor selección para tu tienda — proyecto académico</p>
+      <a class="cta" href="catalogo.html">Ver catálogo</a>
+    </section>
+
+    <section class="features">
+      <article>
+        <h3>Catálogo Online</h3>
+        <p>Explora productos y promociones.</p>
+      </article>
+      <article>
+        <h3>Gestión de Inventario</h3>
+        <p>Registro y control de stock</p>
+      </article>
+      <article>
+        <h3>Reportes</h3>
+        <p>Ventas, mejores productos y clientes frecuentes.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>Proyecto académico — Sistema Integrado de Gestión Comercial</p>
+  </footer>
+
+  <script src="assets/js/app.js"></script>
+</body>
+</html>
