--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,1 +1,29 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Login - Jardín Real</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+  <header class="topbar">
+    <h1 class="brand">Jardín Real</h1>
+  </header>
+
+  <main class="container narrow">
+    <h2>Iniciar sesión</h2>
+    <form id="loginForm" onsubmit="login(event)">
+      <label for="email">Correo</label>
+      <input id="email" type="email" required>
+      <label for="password">Contraseña</label>
+      <input id="password" type="password" required>
+      <button type="submit" class="btn">Entrar</button>
+    </form>
+    <p>¿No tienes cuenta? <a href="index.html">Regístrate</a></p>
+  </main>
+
+  <script src="assets/js/app.js"></script>
+</body>
+</html>
 
