--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,52 +1,34 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Jardín Real - Inicio</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Lunaria Threads</title>
+  <link rel="stylesheet" href="assests/css/styles.css">
 </head>
 <body>
-  <header class="topbar">
-    <h1 class="brand">Jardín Real</h1>
+  <header>
+    <h1>Lunaria Threads</h1>
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="catalogo.html">Catálogo</a>
-      <a href="promociones.html">Promociones</a>
-      <a href="reportes.html">Reportes</a>
-      <a href="gestion_productos.html">Gestión</a>
-      <a href="login.html" class="btn">Iniciar sesión</a>
+      <ul>
+        <li><a href="index.html" class="active">Company</a></li>
+        <li><a href="catalogo.html">Productos</a></li>
+        <li><a href="login.html">Clientes</a></li>
+        <li><a href="#">Ventas</a></li>
+        <li><a href="promociones.html">Promociones</a></li>
+        <li><a href="reportes.html">Reportes</a></li>
+        <li><a href="productos.html">Cuenta</a></li>
+      </ul>
     </nav>
   </header>
 
-  <main class="container">
-    <section class="hero">
-      <h2>Ropa, calzado, disfraces y accesorios</h2>
-      <p>La mejor selección para tu tienda — proyecto académico</p>
-      <a class="cta" href="catalogo.html">Ver catálogo</a>
-    </section>
+  <section class="hero">
+    <h2>Moda, Diversión y Actitud</h2>
+    <p>Explora nuestra colección y encuentra tu estilo</p>
+    <button>Quiero mi look</button>
+  </section>
 
-    <section class="features">
-      <article>
-        <h3>Catálogo Online</h3>
-        <p>Explora productos y promociones.</p>
-      </article>
-      <article>
-        <h3>Gestión de Inventario</h3>
-        <p>Registro y control de stock</p>
-      </article>
-      <article>
-        <h3>Reportes</h3>
-        <p>Ventas, mejores productos y clientes frecuentes.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <p>Proyecto académico — Sistema Integrado de Gestión Comercial</p>
+  <footer>
+    <p>© 2025 Lunaria Threads</p>
   </footer>
-
-  <script src="assets/js/app.js"></script>
 </body>
 </html>
