--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,29 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Login - Jardín Real</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Inicio de Sesión - Lunaria Threads</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  <header class="topbar">
-    <h1 class="brand">Jardín Real</h1>
+  <header>
+    <h1>Lunaria Threads</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Company</a></li>
+        <li><a href="catalogo.html">Productos</a></li>
+        <li><a href="login.html" class="active">Clientes</a></li>
+        <li><a href="#">Ventas</a></li>
+        <li><a href="promociones.html">Promociones</a></li>
+        <li><a href="reportes.html">Reportes</a></li>
+        <li><a href="productos.html">Cuenta</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main class="container narrow">
-    <h2>Iniciar sesión</h2>
-    <form id="loginForm" onsubmit="login(event)">
-      <label for="email">Correo</label>
-      <input id="email" type="email" required>
-      <label for="password">Contraseña</label>
-      <input id="password" type="password" required>
-      <button type="submit" class="btn">Entrar</button>
-    </form>
-    <p>¿No tienes cuenta? <a href="index.html">Regístrate</a></p>
-  </main>
+  <form>
+    <h2>Inicio de Sesión</h2>
+    <label for="email">Correo Electrónico:</label>
+    <input type="email" id="email" placeholder="my@example.com">
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" placeholder="********">
+    <div style="display:flex; justify-content:space-between;">
+      <button type="submit">Iniciar Sesión</button>
+      <button type="button">Registrarse</button>
+    </div>
+  </form>
 
-  <script src="assets/js/app.js"></script>
+  <footer>
+    <p>© 2025 Lunaria Threads</p>
+  </footer>
 </body>
 </html>
-
