--- a/frontend/gestion_productos.html
+++ b/frontend/gestion_productos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Gestión de Productos - Jardín Real</title>
+  <title>Gestión de Productos - Lunaria Threads</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
