--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lunaria Threads</title>
-  <link rel="stylesheet" href="assests/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
@@ -21,10 +21,23 @@
     </nav>
   </header>
 
+  <!-- Hero principal -->
   <section class="hero">
-    <h2>Moda, Diversión y Actitud</h2>
-    <p>Explora nuestra colección y encuentra tu estilo</p>
-    <button>Quiero mi look</button>
+    <div class="hero-container">
+      <!-- Imagen circular -->
+      <div class="hero-image">
+        <img src="img/ropa.jpg" alt="Colección de ropa">
+      </div>
+
+      <!-- Texto -->
+      <div class="hero-text">
+        <span class="tag">Lunaria Threads</span>
+        <h2>MODA, DIVERSIÓN <br> Y ACTITUD</h2>
+        <p>Explora nuestra colección y encuentra tu estilo</p>
+        <button>Quiero mi look</button>
+        <div class="pagination">18 / 24</div>
+      </div>
+    </div>
   </section>
 
   <footer>
