--- a/frontend/catalogo.html
+++ b/frontend/catalogo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="topbar">
-    <h1 class="brand">Jardín Real</h1>
+    <h1 class="brand">Lunaria Threads</h1>
     <nav>
       <a href="index.html">Inicio</a>
     </nav>
