--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lunaria Threads | Moda, diversión y actitud</title>
     <meta name="description" content="Lunaria Threads: Moda, diversión y actitud. Explora nuestra colección y encuentra tu estilo.">
+    
+    <!-- Tipografías -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
+    <!-- HEADER -->
     <header class="site-header">
       <div class="container nav">
         <a class="logo" href="index.html" aria-label="Ir a la página principal">
@@ -23,18 +28,18 @@
             <li><a href="#">Ropa</a></li>
             <li><a href="#">Calzado</a></li>
             <li><a href="#">Disfraces</a></li>
-            <li><a href="#">Ofertas de Temporada</a></li>
+            <li><a href="#">Ofertas</a></li>
             <li><a href="#">Nosotros</a></li>
             <li class="menu-spacer" aria-hidden="true"></li>
             <li class="socials">
-              <a class="icon-btn" href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook" title="Facebook">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M22 12a10 10 0 1 0-11.56 9.88v-6.99H7.9V12h2.54V9.8c0-2.5 1.49-3.89 3.77-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56V12h2.78l-.44 2.89h-2.34v6.99A10 10 0 0 0 22 12"/></svg>
+              <a class="icon-btn" href="https://facebook.com" target="_blank" title="Facebook" aria-label="Facebook">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M22 12a10 10 0 1 0-11.56 9.88v-6.99H7.9V12h2.54V9.8c0-2.5 1.49-3.89 3.77-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56V12h2.78l-.44 2.89h-2.34v6.99A10 10 0 0 0 22 12"/></svg>
               </a>
-              <a class="icon-btn" href="https://x.com" target="_blank" rel="noopener noreferrer" aria-label="X" title="X (Twitter)">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M18.9 3H22l-7.1 8.12L22.7 21h-6.6l-5.17-6.56L4.94 21H2l7.55-8.64L1.6 3h6.75l4.67 6.1L18.9 3Zm-1.16 16.17h1.83L6.36 4.7H4.42l13.32 14.47Z"/></svg>
+              <a class="icon-btn" href="https://x.com" target="_blank" title="X">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M18.9 3H22l-7.1 8.12L22.7 21h-6.6l-5.17-6.56L4.94 21H2l7.55-8.64L1.6 3h6.75l4.67 6.1L18.9 3Z"/></svg>
               </a>
-              <a class="icon-btn" href="https://wa.me/0000000000" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" title="WhatsApp">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M20.52 3.48A11.86 11.86 0 0 0 12.07 0C5.5.04.2 5.35.23 11.92c.01 2.1.57 4.14 1.63 5.94L0 24l6.3-1.82a11.85 11.85 0 0 0 5.78 1.55h.05c6.56-.03 11.87-5.34 11.9-11.9a11.86 11.86 0 0 0-3.51-8.35ZM12.1 21.84h-.04a9.86 9.86 0 0 1-5.02-1.37l-.36-.21-3.74 1.08 1-3.86-.24-.4a9.83 9.83 0 0 1-1.51-5.23C2.16 6.47 6.55 2.1 12.06 2.06a9.84 9.84 0 0 1 6.98 2.89 9.82 9.82 0 0 1 2.86 7c-.03 5.5-4.49 9.89-9.8 9.89Zm5.57-7.36c-.3-.15-1.78-.88-2.05-.98-.27-.1-.47-.15-.68.15-.2.3-.78.98-.95 1.18-.17.2-.35.23-.65.08-.3-.15-1.24-.46-2.36-1.47-.87-.78-1.46-1.74-1.63-2.03-.17-.3-.02-.46.13-.61.14-.14.3-.37.45-.56.15-.2.2-.34.3-.57.1-.23.05-.43-.02-.6-.07-.15-.68-1.64-.93-2.25-.24-.58-.5-.5-.68-.51l-.58-.01c-.2 0-.52.07-.79.38-.27.3-1.04 1.02-1.04 2.5s1.07 2.9 1.22 3.1c.15.2 2.1 3.2 5.1 4.49.71.31 1.26.5 1.69.64.71.22 1.36.19 1.87.12.57-.08 1.78-.73 2.03-1.44.25-.7.25-1.3.17-1.44-.07-.14-.27-.22-.57-.37Z"/></svg>
+              <a class="icon-btn" href="https://wa.me/0000000000" target="_blank" title="WhatsApp">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M20.52 3.48A11.86 11.86 0 0 0 12.07 0C5.5.04.2 5.35.23 11.92c.01 2.1.57 4.14 1.63 5.94L0 24l6.3-1.82a11.85 11.85 0 0 0 5.78 1.55h.05c6.56-.03 11.87-5.34 11.9-11.9a11.86 11.86 0 0 0-3.51-8.35Z"/></svg>
               </a>
             </li>
           </ul>
@@ -42,29 +47,23 @@
 
         <div class="actions">
           <button class="icon-btn" aria-label="Buscar" title="Buscar">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/>
-            </svg>
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/></svg>
           </button>
-          <a class="icon-btn" href="#" aria-label="Cuenta o iniciar sesión" title="Cuenta">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <path d="M20 21a8 8 0 1 0-16 0"/><circle cx="12" cy="7" r="4"/>
-            </svg>
+          <a class="icon-btn" href="#" title="Cuenta">
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21a8 8 0 1 0-16 0"/><circle cx="12" cy="7" r="4"/></svg>
           </a>
-          <a class="icon-btn" href="#" aria-label="Carrito" title="Carrito">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/>
-              <path d="M1 1h4l2.68 12.39a2 2 0 0 0 2 1.61h7.72a2 2 0 0 0 2-1.61L23 6H6"/>
-            </svg>
+          <a class="icon-btn" href="#" title="Carrito">
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 12.39a2 2 0 0 0 2 1.61h7.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>
           </a>
         </div>
       </div>
     </header>
 
+    <!-- HERO -->
     <main>
       <section class="hero">
         <div class="container hero-grid">
-          <div class="hero-image" aria-hidden="true">
+          <div class="hero-image">
             <img src="https://images.unsplash.com/photo-1520975937854-6a4ea0a6c06d?q=80&w=1600&auto=format&fit=crop" alt="Moda y estilo en Lunaria Threads">
           </div>
           <div class="hero-content">
@@ -77,6 +76,7 @@
       </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="site-footer">
       <div class="container">
         <p>&copy; <span id="year"></span> Lunaria Threads. Todos los derechos reservados.</p>
@@ -88,3 +88,4 @@
     </script>
   </body>
 </html>
+
