--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="hero">
         <div class="container hero-grid">
           <div class="hero-image">
-            <img src="https://images.unsplash.com/photo-1520975937854-6a4ea0a6c06d?q=80&w=1600&auto=format&fit=crop" alt="Moda y estilo en Lunaria Threads">
+            <img src="images/index-001.png">
           </div>
           <div class="hero-content">
             <h1>Lunaria Threads</h1>
