--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -1,1 +1,94 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lunaria Threads | Iniciar Sesión</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/login.css">
+</head>
+<body>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="nav container">
+      <a href="index.html" class="logo">
+        <span class="logo-mark">✦</span> Lunaria Threads
+      </a>
+
+      <nav class="main-nav" aria-label="Navegación principal">
+        <ul class="menu">
+          <li><a href="#">Ropa</a></li>
+          <li><a href="#">Calzado</a></li>
+          <li><a href="#">Disfraces</a></li>
+          <li><a href="#">Ofertas</a></li>
+          <li><a href="#">Nosotros</a></li>
+          <li class="menu-spacer" aria-hidden="true"></li>
+          <li class="socials">
+            <a class="icon-btn" href="https://facebook.com" target="_blank" title="Facebook" aria-label="Facebook">
+              <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M22 12a10 10 0 1 0-11.56 9.88v-6.99H7.9V12h2.54V9.8c0-2.5 1.49-3.89 3.77-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56V12h2.78l-.44 2.89h-2.34v6.99A10 10 0 0 0 22 12"/></svg>
+            </a>
+            <a class="icon-btn" href="https://x.com" target="_blank" title="X">
+              <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M18.9 3H22l-7.1 8.12L22.7 21h-6.6l-5.17-6.56L4.94 21H2l7.55-8.64L1.6 3h6.75l4.67 6.1L18.9 3Z"/></svg>
+            </a>
+            <a class="icon-btn" href="https://wa.me/0000000000" target="_blank" title="WhatsApp">
+              <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M20.52 3.48A11.86 11.86 0 0 0 12.07 0C5.5.04.2 5.35.23 11.92c.01 2.1.57 4.14 1.63 5.94L0 24l6.3-1.82a11.85 11.85 0 0 0 5.78 1.55h.05c6.56-.03 11.87-5.34 11.9-11.9a11.86 11.86 0 0 0-3.51-8.35Z"/></svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main class="auth-container">
+    <div class="auth-card">
+      <div class="auth-tabs">
+        <button id="btnLogin" class="tab active">Iniciar Sesión</button>
+        <button id="btnRegister" class="tab">Registrarse</button>
+      </div>
+
+      <!-- LOGIN FORM -->
+      <form id="loginForm" class="form active">
+        <h2>Bienvenido de nuevo</h2>
+        <div class="form-group">
+          <label for="loginEmail">Correo electrónico</label>
+          <input type="email" id="loginEmail" placeholder="tuemail@ejemplo.com" required>
+        </div>
+        <div class="form-group">
+          <label for="loginPassword">Contraseña</label>
+          <input type="password" id="loginPassword" placeholder="••••••••" required>
+        </div>
+        <button type="submit" class="btn-primary">Iniciar sesión</button>
+      </form>
+
+      <!-- REGISTER FORM -->
+      <form id="registerForm" class="form">
+        <h2>Crea tu cuenta</h2>
+        <div class="form-group">
+          <label for="regName">Nombre completo</label>
+          <input type="text" id="regName" placeholder="Tu nombre completo" required>
+        </div>
+        <div class="form-group">
+          <label for="regEmail">Correo electrónico</label>
+          <input type="email" id="regEmail" placeholder="tuemail@ejemplo.com" required>
+        </div>
+        <div class="form-group">
+          <label for="regPassword">Contraseña</label>
+          <input type="password" id="regPassword" placeholder="••••••••" required>
+        </div>
+        <button type="submit" class="btn-primary">Registrarse</button>
+      </form>
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>&copy; <span id="year"></span> Lunaria Threads. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <script src="assets/js/login.js"></script>
+</body>
+</html>
 
