--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <section class="hero">
         <div class="container hero-grid">
           <div class="hero-image">
-            <img src="images/index-001.png">
+            <img src="frontend/assets/img/index001.png" alt="Imagen principal de Lunaria Threads">
           </div>
           <div class="hero-content">
             <h1>Lunaria Threads</h1>
             <p class="tagline">Moda, diversión y actitud</p>
             <p class="subtitle">Explora nuestra colección y encuentra tu estilo</p>
-            <a class="btn-primary" href="productos.html">Ver productos</a>
+            <a class="btn-primary" href="frontend/pages/products.html">Ver productos</a>
           </div>
         </div>
       </section>
