--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -49,7 +49,7 @@
           <button class="icon-btn" aria-label="Buscar" title="Buscar">
             <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/></svg>
           </button>
-          <a class="icon-btn" href="frontend/pages/login.html" title="Cuenta">
+          <a class="icon-btn" href="login.html" title="Cuenta">
             <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21a8 8 0 1 0-16 0"/><circle cx="12" cy="7" r="4"/></svg>
           </a>
           <a class="icon-btn" href="#" title="Carrito">
@@ -70,7 +70,7 @@
             <h1>Lunaria Threads</h1>
             <p class="tagline">Moda, diversión y actitud</p>
             <p class="subtitle">Explora nuestra colección y encuentra tu estilo</p>
-            <a class="btn-primary" href="frontend/pages/products.html">Ver productos</a>
+            <a class="btn-primary" href="products.html">Ver productos</a>
           </div>
         </div>
       </section>
