--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="frontend/assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
   </head>
 
   <body>
@@ -64,7 +64,7 @@
       <section class="hero">
         <div class="container hero-grid">
           <div class="hero-image">
-            <img src="frontend/assets/img/index001.png" alt="Imagen principal de Lunaria Threads">
+            <img src="../assets/img/index001.png" alt="Imagen principal de Lunaria Threads">
           </div>
           <div class="hero-content">
             <h1>Lunaria Threads</h1>
