--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lunaria Threads | Iniciar Sesión</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="assets/css/login.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/login.css">
 </head>
 <body>
   <!-- HEADER -->
@@ -88,7 +88,7 @@
     </div>
   </footer>
 
-  <script src="assets/js/login.js"></script>
+  <script src="../assets/js/login.js"></script>
 </body>
 </html>
 
