--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -70,7 +70,7 @@
             <h1>Lunaria Threads</h1>
             <p class="tagline">Moda, diversión y actitud</p>
             <p class="subtitle">Explora nuestra colección y encuentra tu estilo</p>
-            <a class="btn-primary" href="products.html">Ver productos</a>
+            <a class="btn-primary" href="productos.html">Ver productos</a>
           </div>
         </div>
       </section>
