--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -10,57 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="../assets/css/styles.css">
     <script src="../assets/js/api.js" defer></script>
   </head>
-
   <body>
-    <!-- HEADER -->
-    <header class="site-header">
-      <div class="container nav">
-        <a class="logo" href="/pages/index.html" aria-label="Ir a la página principal">
-          <span class="logo-mark" aria-hidden="true">🌙</span>
-          <span class="logo-text">Lunaria Threads</span>
-        </a>
-
-        <nav class="main-nav" aria-label="Navegación principal">
-          <ul class="menu">
-            <li><a href="#">Ropa</a></li>
-            <li><a href="#">Calzado</a></li>
-            <li><a href="#">Disfraces</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li class="menu-spacer" aria-hidden="true"></li>
-            <li class="socials">
-              <a class="icon-btn" href="https://facebook.com" target="_blank" title="Facebook" aria-label="Facebook">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M22 12a10 10 0 1 0-11.56 9.88v-6.99H7.9V12h2.54V9.8c0-2.5 1.49-3.89 3.77-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56V12h2.78l-.44 2.89h-2.34v6.99A10 10 0 0 0 22 12"/></svg>
-              </a>
-              <a class="icon-btn" href="https://x.com" target="_blank" title="X">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M18.9 3H22l-7.1 8.12L22.7 21h-6.6l-5.17-6.56L4.94 21H2l7.55-8.64L1.6 3h6.75l4.67 6.1L18.9 3Z"/></svg>
-              </a>
-              <a class="icon-btn" href="https://wa.me/0000000000" target="_blank" title="WhatsApp">
-                <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M20.52 3.48A11.86 11.86 0 0 0 12.07 0C5.5.04.2 5.35.23 11.92c.01 2.1.57 4.14 1.63 5.94L0 24l6.3-1.82a11.85 11.85 0 0 0 5.78 1.55h.05c6.56-.03 11.87-5.34 11.9-11.9a11.86 11.86 0 0 0-3.51-8.35Z"/></svg>
-              </a>
-            </li>
-          </ul>
-        </nav>
-
-        <div class="actions">
-          <button class="icon-btn" aria-label="Buscar" title="Buscar">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/></svg>
-          </button>
-          <a class="icon-btn" href="/pages/login.html" title="Cuenta">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21a8 8 0 1 0-16 0"/><circle cx="12" cy="7" r="4"/></svg>
-          </a>
-          <a class="icon-btn" href="#" title="Carrito">
-            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 12.39a2 2 0 0 0 2 1.61h7.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>
-          </a>
-        </div>
-      </div>
-    </header>
-
-    <!-- HERO -->
+    <div id="navbar"></div>
     <main>
       <section class="hero">
         <div class="container hero-grid">
@@ -76,33 +30,22 @@
         </div>
       </section>
     </main>
-
-    <!-- FOOTER -->
-    <footer class="site-footer">
-      <div class="container">
-        <p>&copy; <span id="year"></span> Lunaria Threads. Todos los derechos reservados.</p>
-      </div>
-    </footer>
-
+    <div id="footer"></div>
     <script>
-      // Año actual en el footer
-      document.getElementById('year').textContent = new Date().getFullYear();
-
-      // Cargar categorías dinámicamente en el menú
-      async function loadCategories() {
-        const categories = await fetchCategories();
-        const menu = document.querySelector('.menu');
-        const menuItems = categories.map(category => 
-          `<li><a href="productos.html?categoria=${category.id}">${category.name}</a></li>`
-        ).join('');
-        
-        // Reemplazar los items estáticos del menú con los dinámicos
-        menu.innerHTML = menuItems + menu.innerHTML.slice(menu.innerHTML.indexOf('<li class="menu-spacer"'));
+      async function includeComponent(id, file) {
+        const res = await fetch(file);
+        document.getElementById(id).innerHTML = await res.text();
       }
-
-      // Cargar datos al iniciar
-      document.addEventListener('DOMContentLoaded', () => {
-        loadCategories();
+      includeComponent('navbar','../frontend/components/navbar.html');
+      includeComponent('footer','../frontend/components/footer.html');
+      document.addEventListener('DOMContentLoaded', async () => {
+        const categories = await fetchCategories();
+        const navMenu = document.querySelector('#navbar .menu');
+        if(navMenu){
+          const staticPart = navMenu.innerHTML.substring(navMenu.innerHTML.indexOf('<li class="menu-spacer"'));
+          navMenu.innerHTML = categories.map(c=>`<li><a href="productos.html?categoria=${c.id}">${c.name}</a></li>`).join('') + staticPart;
+        }
+        document.getElementById('year')?.textContent = new Date().getFullYear();
       });
     </script>
   </body>
