--- a/frontend/pages/productos.html
+++ b/frontend/pages/productos.html
@@ -11,7 +11,7 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="nav container">
-      <a href="index.html" class="logo">
+      <a class="logo" href="/pages/index.html" aria-label="Ir a la página principal">
         <span class="logo-mark">✦</span> Lunaria Threads
       </a>
 
@@ -36,7 +36,18 @@
           </li>
         </ul>
       </nav>
-    </div>
+    <div class="actions">
+          <button class="icon-btn" aria-label="Buscar" title="Buscar">
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/></svg>
+          </button>
+          <a class="icon-btn" href="/pages/login.html" title="Cuenta">
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21a8 8 0 1 0-16 0"/><circle cx="12" cy="7" r="4"/></svg>
+          </a>
+          <a class="icon-btn" href="#" title="Carrito">
+            <svg viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="currentColor" stroke-width="2"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 12.39a2 2 0 0 0 2 1.61h7.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>
+          </a>
+        </div>
+      </div>
   </header>
 
   <!-- SECCIÓN DE PRODUCTOS -->
@@ -44,50 +55,8 @@
     <h1 class="productos-title">Colección Destacada</h1>
     <p class="productos-subtitle">Descubre nuestras prendas y accesorios más populares</p>
 
-    <div class="productos-grid">
-      <!-- Producto 1 -->
-      <div class="producto-card">
-        <img src="../assets/img/ropa1.jpg" alt="Blusa floral">
-        <h3>Blusa Floral</h3>
-        <p class="precio">S/ 89.90</p>
-        <div class="acciones">
-          <button class="btn-outline ver">Ver más</button>
-          <button class="btn-primary agregar">Añadir al carrito</button>
-        </div>
-      </div>
-
-      <!-- Producto 2 -->
-      <div class="producto-card">
-        <img src="../assets/img/ropa2.jpg" alt="Vestido Lavanda">
-        <h3>Vestido Lavanda</h3>
-        <p class="precio">S/ 149.00</p>
-        <div class="acciones">
-          <button class="btn-outline ver">Ver más</button>
-          <button class="btn-primary agregar">Añadir al carrito</button>
-        </div>
-      </div>
-
-      <!-- Producto 3 -->
-      <div class="producto-card">
-        <img src="../assets/img/ropa3.jpg" alt="Pantalón Denim">
-        <h3>Pantalón Denim</h3>
-        <p class="precio">S/ 129.90</p>
-        <div class="acciones">
-          <button class="btn-outline ver">Ver más</button>
-          <button class="btn-primary agregar">Añadir al carrito</button>
-        </div>
-      </div>
-
-      <!-- Producto 4 -->
-      <div class="producto-card">
-        <img src="../assets/img/ropa4.jpg" alt="Chaqueta de cuero">
-        <h3>Chaqueta de Cuero</h3>
-        <p class="precio">S/ 249.00</p>
-        <div class="acciones">
-          <button class="btn-outline ver">Ver más</button>
-          <button class="btn-primary agregar">Añadir al carrito</button>
-        </div>
-      </div>
+    <div class="productos-grid" id="productosGrid">
+      <!-- PRODUCTS_PLACEHOLDER -->
     </div>
   </main>
 
@@ -98,6 +67,6 @@
     </div>
   </footer>
 
-  <script src="../assets/js/productos.js"></script>
+<script src="../assets/js/productos.js" defer></script>
 </body>
 </html>
