--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="navbar"></div>
-    <main>
+    <main class="container">
       <section class="hero">
         <div class="container hero-grid">
           <div class="hero-image">
