--- a/frontend/pages/admin_panel.html
+++ b/frontend/pages/admin_panel.html
@@ -193,27 +193,31 @@
       </div>
       <div class="modal-body">
         <form id="productForm">
-          <input type="hidden" id="productId">
-          <div class="form-group">
-            <label for="productName">Nombre:</label>
-            <input type="text" id="productName" required>
-          </div>
-          <div class="form-group">
-            <label for="productCategory">Categoría:</label>
-            <input type="text" id="productCategory" required>
-          </div>
-          <div class="form-group">
-            <label for="productPrice">Precio:</label>
-            <input type="number" id="productPrice" step="0.01" min="0" required>
-          </div>
-          <div class="form-group">
-            <label for="productStock">Stock:</label>
-            <input type="number" id="productStock" min="0" required>
-          </div>
-          <div class="form-actions">
-            <button type="button" class="btn-secondary" id="cancelProduct">Cancelar</button>
-            <button type="submit" class="btn-primary">Guardar</button>
-          </div>
+          <input type="hidden" id="idProducto">
+
+          <label>Nombre:</label>
+          <input type="text" id="nombre" required>
+
+          <label>Precio:</label>
+          <input type="number" id="precio" step="0.01" required>
+
+          <label>Stock:</label>
+          <input type="number" id="stock" required>
+
+          <label>Categoría:</label>
+          <select id="idCategoria">
+            <option value="">-- Sin categoría --</option>
+          </select>
+
+          <label>Subcategoría:</label>
+          <select id="idSubcategoria">
+            <option value="">-- Sin subcategoría --</option>
+          </select>
+
+          <label>Imagen:</label>
+          <input type="file" id="imagen" accept="image/*">
+
+          <button type="submit">Guardar</button>
         </form>
       </div>
     </div>
